# android-base64

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/kotemaru/android/base64/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: base64.cpp  base64.h  base64_main.cpp
app/src/test/java/org/kotemaru/android/base64/: ExampleUnitTest.java
